fix header style on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -174,6 +174,11 @@ a img {
     align-items: center;
     -webkit-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
+
+    @media screen and (max-width: $mobile) {
+        top: 50px;
+        transform: translate(-50%, 0%);
+    }
 }
 .header-avatar {
     position: relative;
@@ -311,6 +316,11 @@ a img {
 
     display: flex;
     justify-content: center;
+
+    @media screen and (max-width: $mobile){
+        transform: translate(0, 20%);
+        
+    }
 
 }
 
